--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -202,9 +202,9 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/station/download">
+                            <a href="/station/requirements">
                                 <i class="metismenu-icon pe-7s-box1"></i>
-                                Download
+                                Requirements
                             </a>
                         </li>
                     </ul>
