--- a/app/templates/account/email/black_swan.html
+++ b/app/templates/account/email/black_swan.html
@@ -2,4 +2,4 @@
 <p>The trigger for potential MARKET DROP was activated.</p>
 <p>Algotrader have closed all open positions and disabled a Buy option.</p>
 
-<p>To enable the BUY manually please follow: <a href="http://colak.eu.pythonanywhere.com/algotradersettings/usersettings">settings page</a></p>
+<p>To enable the BUY manually please follow: <a href="https://www.algotrader.company/algotradersettings/usersettings">settings page</a></p>
