--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -34,7 +34,7 @@
 
 
 <!--</style>-->
-<div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
+<div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header closed-sidebar">
     <div class="app-header header-shadow">
         {% if current_user.is_authenticated %}
         <div class="app-header__logo">
