--- a/app/templates/account/email/user_data_provided.html
+++ b/app/templates/account/email/user_data_provided.html
@@ -1,4 +1,4 @@
 <p>The user <b>{{user.last_name}} {{user.first_name}}</b></p>
 <p>have provided all necessary details for <b>{{user.email}}</b></p>
 <p>user is waiting for VM confirmation.</p>
-<p>to confirm user : link_to_users_at_admin</p>
+<p>to confirm user : <a href="{{url}}">click here</a></p>
