--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -71,12 +71,12 @@
                 </span>
         </div>
         <div class="app-header__content">
-            <div class="app-header-left">
+            <div class="app-header-left" style="width: 70%;">
                 <ul class="header-menu nav">
                     <li class="btn-group">
                         <a href="/" class="nav-link">
-                            <i class="nav-link-icon fa fa-home"> </i>
-                            AlgoTrader Server
+                            <img class="logo-img" style="width: 6%; margin-right: 5px;" src="../../static/images/Logos/logo_transparent_background.png">
+                            AlgoTrader
                         </a>
                     </li>
                     {% if current_user.is_admin() %}
