--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -75,8 +75,7 @@
                 <ul class="header-menu nav">
                     <li class="btn-group">
                         <a href="/" class="nav-link">
-                            <img class="logo-img" style="width: 6%; margin-right: 5px;" src="../../static/images/Logos/logo_transparent_background.png">
-                            AlgoTrader
+                            <img class="logo-img" style="width: 19%;" src="../../static/images/Logos_New/logo_transparent_background.png">
                         </a>
                     </li>
                     {% if current_user.is_admin() %}
