--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -74,7 +74,7 @@
                             <div class="widget-subheading">All users portfolio value</div>
                         </div>
                         <div class="widget-content-right">
-                            <div class="widget-numbers text-warning">10 327</div>
+                            <div class="widget-numbers text-warning">{{system_status['funds']}} $</div>
                         </div>
                     </div>
                 </div>
@@ -102,8 +102,8 @@
                         <div class="widget-heading">Success Rate</div>
                     </div>
                     <div class="widget-content-right">
-                        <div class="widget-heading text-success">53 Success</div>
-                        <div class="widget-subheading text-danger">6 Fail</div>
+                        <div class="widget-heading text-success">{{system_status['profit_positions']}} Success</div>
+                        <div class="widget-subheading text-danger">{{system_status['lost_positions']}} Fail</div>
                     </div>
                 </div>
             </div>
