last update spyder data

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -89,7 +89,7 @@
                             <div class="widget-subheading">Last data update</div>
                         </div>
                         <div class="widget-content-right">
-                            <div class="text-primary">21/08 2021 12:36</div>
+                            <div class="text-primary">{{system_status['last_update_date']}}</div>
                         </div>
                     </div>
                 </div>
